@@ -2,6 +2,8 @@
 v3.0.0-git
 ----------
 
+[mjr] Fix performing image actions in Lightbox galleries.
+[mjr] Fix display of missing widgets.
 
 
 -----------
